--- a/templates/disease.html
+++ b/templates/disease.html
@@ -50,6 +50,10 @@
                         <a class="nav-link" href="/about">About</a>
                     </li>
                     
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact">Contact</a>
+                    </li>
+                    
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
